# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: coverage  coverage.yml  rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 0003_make_status_not_null_in_subscriptions.sql  0004_create_subscription_tokens_table.sql.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: email_client.rs  health_check.rs
tests/api/: helpers.rs  main.rs  newsletter.rs  subscribe_confirm.rs  subscriptions.rs
